# python-novaclient

./: .coveragerc  .gitignore  .gitreview  .mailmap  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  HACKING  HACKING.rst  LICENSE  MANIFEST.in  README.rst  bindep.txt  functional_creds.conf.sample  lower-constraints.txt  openstack-common.conf  other-requirements.txt  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
cloudservers/: __init__.py  client.py  exceptions.py  flavors.py  images.py  servers.py  shell.py
debian/: changelog  control  copyright  links  manpages  nova.1  rules  watch
doc/: .gitignore  Makefile  requirements.txt
doc/source/: api.rst  conf.py  index.rst  shell.rst
doc/test/: redirect-tests.txt
docs/: Makefile  api.rst  conf.py  index.rst  releases.rst  shell.rst
docs/ref/: backup_schedules.rst  exceptions.rst  flavors.rst  images.rst  ipgroups.rst  servers.rst
novaclient/: __init__.py  accounts.py  api_versions.py  auth_plugin.py  backup_schedules.py  base.py  client.py  crypto.py  exceptions.py  extension.py  flavors.py  i18n.py  images.py  ipgroups.py  servers.py  service_catalog.py  shell.py  utils.py  versioninfo  zones.py
novaclient/keystone/: __init__.py  client.py  shell.py  tenants.py  users.py
novaclient/tests/: fakes.py  test_auth_plugins.py  test_base.py  test_client.py  test_http.py  test_service_catalog.py  test_shell.py  test_utils.py  utils.py
novaclient/v1_0/: __init__.py  accounts.py  backup_schedules.py  base.py  client.py  flavors.py  images.py  ipgroups.py  servers.py  shell.py  zones.py
novaclient/v1_1/: __init__.py  agents.py  aggregates.py  availability_zones.py  base.py  certs.py  client.py  cloudpipe.py  coverage_ext.py  exceptions.py  fixed_ips.py  flavor_access.py  flavors.py  floating_ip_dns.py  floating_ip_pools.py  floating_ips.py  floating_ips_bulk.py  fping.py  hosts.py  hypervisors.py  images.py  keypairs.py  limits.py  networks.py  quota_classes.py  quotas.py  security_group_default_rules.py  security_group_rules.py  security_groups.py  servers.py  services.py  shell.py  usage.py  virtual_interfaces.py  volume_snapshots.py  volumes.py  zones.py
novaclient/v2/: agents.py  aggregates.py  assisted_volume_snapshots.py  availability_zones.py  cells.py  certs.py  client.py  cloudpipe.py  fixed_ips.py  flavor_access.py  flavors.py  floating_ip_dns.py  floating_ip_pools.py  floating_ips.py  floating_ips_bulk.py  fping.py  hosts.py  hypervisors.py  images.py  instance_action.py  instance_usage_audit_log.py  keypairs.py  limits.py  list_extensions.py  migrations.py  networks.py  quota_classes.py  quotas.py  security_group_default_rules.py  security_group_rules.py  security_groups.py  server_external_events.py  server_groups.py  server_migrations.py  servers.py  (+8 more)
novatools/: __init__.py  backup_schedules.py  base.py  client.py  exceptions.py  flavors.py  images.py  ipgroups.py  servers.py  shell.py  zones.py
playbooks/: post.yaml  python-novaclient-functional.yaml
tests/: fakes.py  fakeserver.py  test_accounts.py  test_auth.py  test_auth_plugins.py  test_backup_schedules.py  test_base.py  test_client.py  test_discover.py  test_flavors.py  test_http.py  test_images.py  test_ipgroups.py  test_servers.py  test_service_catalog.py  test_shell.py  test_utils.py  test_zones.py  utils.py
tools/: generate_authors.sh  install_venv.py  install_venv_common.py  nova.bash_completion  nova.zsh_completion  pip-requires  test-requires  tox_install.sh
(+515 files in other folders)
