[metadata]
name = python-novaclient
summary = Client library for OpenStack Compute API
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-novaclient/latest
python-requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    novaclient

[entry_points]
console_scripts =
    nova = novaclient.shell:main

[compile_catalog]
domain = novaclient
directory = novaclient/locale

[update_catalog]
domain = novaclient
output_dir = novaclient/locale
input_file = novaclient/locale/novaclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = novaclient/locale/novaclient.pot
